[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tictactoe"
version = "0.1.0"
description = "A Tic-Tac-Toe AI that learns through Q-learning"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "black>=24.8.0",
    "isort>=5.13.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
