[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tictactoe"
version = "0.1.0"
description = "A Tic-Tac-Toe AI that learns through Q-learning"
requires-python = ">=3.11"

[project.dependencies]
pyyaml = ">=6.0"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "black>=24.8.0",
    "isort>=5.13.2",
]

[project.scripts]
tictactoe = "tictactoe:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov"

[tool.coverage.run]
source = ["src/tictactoe"]
branch = true
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]
show_missing = true
fail_under = 80

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
